fix overflow in sidebar not visible when page height is low

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@
     min-width: 300px;
     min-height: 410px;
     z-index: 1;
+    overflow-y: auto;
 }
 
 #content {
